Fixed Padding for Search
- Fixed spacing issue it so it is no longer covering the grocery toggele button

--- a/frontend/src/pages/search.css
+++ b/frontend/src/pages/search.css
@@ -75,3 +75,7 @@
     width:70%;
     height:40px;
 }
+
+.search-spacing{
+    padding-top: 50px;
+}
